# SHK

./: .gitattributes  .gitignore  Gemfile  LICENSE  README.md  to-do.md
tools/lit-import/: .gitignore  DATA_SOURCES.md  README.md  SOURCE_MANAGEMENT.md  cli.py  pyproject.toml  split_chapters.py  usfm_import.py
tools/lit-import/core/: README.md  kjv_strongs_import.py
tools/lit-import/data/processed/bible_en_kjv/: tokens.jsonl  verses.meta.json
tools/lit-import/data/raw/bible/: bible_plan.json
tools/lit-import/helper_scripts/: README.md  bible_cleanup_structure.py  bible_registry_update.py  check_bible_translations.py  check_imports.py  data_manifest_check.py  historical_check.py  source_fill_bible_and_strongs.py  source_report.py
tools/lit-import/helper_scripts/old/: bible_plaintext_pass.py  data_manifest_fix.py  historical_fix.py  normalize_paths.py
tools/lit-import/import_scripts/: README.md  strongs_import_cli.py
tools/lit-import/notebooks/: lit-import-v1-pipeline.ipynb
tools/lit-import/scripts/: build_bible_manifests.py  make_all.sh  make_kjv_plain.sh  strongs_lexicon_build.py  verify_counts.py
tools/lit-import/src/shk_lit_import/: build_indexes.py  cli.py  fetch.py  manifest.py  parse_kjv.py  parse_strongs.py
tools/lit-import/src/shk_lit_import/exporters/: bible_per_book.py  lexicon_az.py
tools/lit-import/src/shk_lit_import/parsers/: bible_osis_plain.py  strongs_xml.py
tools/lit-import/src/shk_lit_import/schemas/: strongs.schema.json
tools/lit-import/templates/: bible_manifest.template.json
tools/lit-import/tests/: test_cli.py
(+51438 files in other folders)
