[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shk-lit-import"
version = "0.1.0"
description = "Seeking His Kingdom literature import tool (KJV + Strong's)"
authors = [{name="SHK"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml>=5.3.0",
    "pydantic>=2.8.0"
]

[project.scripts]
shk-lit = "shk_lit_import.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
